added more sounds

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/cis-580-project1/v16/Browse.VC.db
+/.vs/cis-580-project1/v16/Browse.VC.opendb
