ship direction, explosion sprite animation

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /.vs/cis-580-project1/v16/Browse.VC.db
 /.vs/cis-580-project1/v16/Browse.VC.opendb
+/project1/.vs/MonoGameWindowsStarter/v16/Server/sqlite3/db.lock
