--- a/project1/MonoGameWindowsStarter/MonoGameWindowsStarter.csproj
+++ b/project1/MonoGameWindowsStarter/MonoGameWindowsStarter.csproj
@@ -41,6 +41,12 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Content\Sprites\Bullet.cs" />
+    <Compile Include="Content\Sprites\Enemies.cs" />
+    <Compile Include="Content\Sprites\Enemy.cs" />
+    <Compile Include="Content\Sprites\Ship.cs" />
+    <Compile Include="Content\Sprites\Sprite.cs" />
+    <Compile Include="Flyweight.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
@@ -60,6 +66,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
